<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="bottom|center"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/regName"
                android:layout_width="440dp"
                android:layout_height="55dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_user_win10"
                android:drawablePadding="10dp"
                android:hint="@string/hint_name"
                android:inputType="textCapWords"
                android:paddingBottom="20dp"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/regGender"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:entries="@array/gender"
                android:paddingBottom="20dp"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:textSize="18sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="15dp"
            android:drawableLeft="@drawable/ic_message_white"
            android:drawablePadding="10dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingBottom="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="15dp"
            android:drawableLeft="@drawable/ic_password_white"
            android:drawablePadding="10dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingBottom="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="16sp" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dip"
            android:background="@drawable/login_button_shape"
            android:text="@string/btn_register"
            android:textColor="@color/white" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToLoginScreen"
            style="@style/RobotoButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>